--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div id="app">
         {{title}}
+        <input type="text" v-model="title">
     </div>
     <script src="./js/Observer.js"></script>
     <script src="./js/Dep.js"></script>
